--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "multer": "2.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pinia": "^3.0.4",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
     "vue-router": "^5.0.1"
